--- a/frontend/static/css/resume.css
+++ b/frontend/static/css/resume.css
@@ -8,17 +8,21 @@
     width: 80%;
     padding: 4rem 8rem;
     display: grid;
-    column-gap: 3rem;
+    grid-gap: 3rem;
     grid-template-columns: .5fr 2fr;
+    grid-template-areas: "resume__sidebar resume__body"
+                         "resume__sidebar resume__body"
+                         "resume__interests resume__projects";
 }
 
 .resume__sidebar {
+    grid-area: resume__sidebar;
     height: 100%;
     width: 100%;
     min-width: 300px;
     display: flex;
     flex-direction: column;
-    background-color: #4754b30c;
+    background-color: #4754b328;
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
@@ -67,6 +71,25 @@
     font-size: 14px;
 }
 
+.resume__interests {
+    height: 90%;
+    grid-area: resume__interests;
+    display: flex;
+    flex-direction: column;
+    background-color: #4754b328;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.resume__interests--header {
+    color: #4754b3;
+    text-transform: uppercase;
+}
+
+.resume__body {
+    grid-area: resume__body;
+}
+
 .resume__body--row {
     padding: 1rem 0; 
 }
@@ -75,52 +98,35 @@
     color: #fff;
 }
 
-.resume__body--section-row {
-    background-color: #4754b30c;
+.resume__body--section-row, .resume__projects--section-row {
+    background-color: #4754b328;
     padding: .75rem;
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.resume__body--section-catg {
+.resume__body--section-catg, .resume__projects--section-catg {
     color: #4754b3;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin: .25rem 0;
+    margin: .25rem .5rem;
 }
 
-#date-1 {
-    grid-area: date-1;
-}
+#date-1 { grid-area: date-1; }
+#date-2 { grid-area: date-2; }
+#date-3 { grid-area: date-3; }
 
-#date-2 {
-    grid-area: date-2;
-}
-
-#date-3 {
-    grid-area: date-3;
-}
-
-#exp-1 {
-    grid-area: exp-1;
-}
-
-#exp-2 {
-    grid-area: exp-2;
-}
-
-#exp-3 {
-    grid-area: exp-3;
-}
+#exp-1 { grid-area: exp-1; }
+#exp-2 { grid-area: exp-2; }
+#exp-3 { grid-area: exp-3; }
 
 .resume__body-grid {
     display: grid;
     grid-template-columns: .5fr 1.25fr;
     grid-template-rows: auto;
-    grid-template-areas: 
-    "date-1 exp-1"
-    "date-2 exp-2"
-    "date-3 exp-3";
+    grid-template-areas: "date-1 exp-1"
+                         "date-2 exp-2"
+                         "date-3 exp-3";
 }
 
 .resume__body--section {
@@ -132,7 +138,7 @@
 }
 
 .resume__body--title, .resume__body--title-sm {
-    color: #4754b3;;
+    color: #4754b3;
     margin: .25rem 0;
 }
 
@@ -156,4 +162,56 @@
 
 .resume__body--list-item {
     line-height: 1.75;
+}
+
+.resume__projects {
+    grid-area: resume__projects;
+}
+
+.resume__projects-grid {
+    display: grid;
+    grid-template-columns: .25fr 1.25fr;
+    grid-template-rows: auto;
+    grid-gap: 2rem;
+    grid-template-areas: "name-1 explanation-1"
+                         "name-2 explanation-2"
+                         "name-3 explanation-3";
+}
+
+#name-1 { grid-area: name-1; }
+#name-2 { grid-area: name-2; }
+#name-3 { grid-area: name-3; }
+
+#explanation-1 { grid-area: explanation-1; }
+#explanation-2 { grid-area: explanation-2; }
+#explanation-3 { grid-area: explanation-3; }
+
+.resume__projects--name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1.5rem;
+}
+
+.resume__projects--header {
+    margin: .25rem;
+    color: #4754b3;
+}
+
+.resume__projects--tech {
+    margin: 0;
+    color: #fff;
+}
+
+.resume__projects--explanation {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0;
+    padding: .5rem 0;
+    border-bottom: 1px solid #4754b32a;
+}
+
+.resume__projects--synop {
+    color: #5a5555;
 }
